# eac-compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  driver.asm  fib.c  test.c
parser/: CMakeLists.txt  antlr4-runtime.lib  parser.cpp
src/: asm.rs  ast.rs  ir.rs  lib.rs  main.rs  parser.rs  reg_alloc.rs  reg_allocator.rs  serializer.rs  ssa.rs  structure.rs  x64.rs
tests/: fib.asm  fib.rs
utils/: driver.asm  main_example.asm
